25w31b, experimental, crop generation does not work at all ;-;

--- a/src/main/resources/data/cravings_mod/neoforge/biome_modifier/single_crop_generation_biome_modifier.json
+++ b/src/main/resources/data/cravings_mod/neoforge/biome_modifier/single_crop_generation_biome_modifier.json
@@ -1,9 +1,8 @@
 {
   "type": "neoforge:add_features",
-  "biomes": [
-    "beach",
-    "meadow"
-  ],
+  "biomes": {
+    "type": "neoforge:any"
+  },
   "features": "cravings_mod:single_crop_generation",
   "step": "vegetal_decoration"
 }
